--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -54,15 +54,17 @@
             <ul class="itemBox__row itemBox__row--item JS_filterableCell JS_sortable">
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
+                  <div class="itemBox__value">
 
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item pmx-selector__item--selected">
-                      <div class="pmx-selector__block ">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
+                    <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector__item pmx-selector__item--selected">
+                        <div class="pmx-selector__block ">
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
+                        </div>
                       </div>
                     </div>
-                  </div>
 
+                  </div>
                 </div>
               </li>
               <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -75,15 +77,17 @@
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
+                  <div class="itemBox__value">
 
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item pmx-selector__item--selected">
-                      <div class="pmx-selector__block ">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">19/03/18-20/03/18</div>
+                    <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector__item pmx-selector__item--selected">
+                        <div class="pmx-selector__block ">
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">19/03/18-20/03/18</div>
+                        </div>
                       </div>
                     </div>
-                  </div>
 
+                  </div>
                 </div>
               </li>
               <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -118,15 +122,17 @@
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
+                  <div class="itemBox__value">
 
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item pmx-selector__item--selected">
-                      <div class="pmx-selector__block ">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">today</div>
+                    <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector__item pmx-selector__item--selected">
+                        <div class="pmx-selector__block ">
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">today</div>
+                        </div>
                       </div>
                     </div>
-                  </div>
 
+                  </div>
                 </div>
               </li>
               <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -139,15 +145,17 @@
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
+                  <div class="itemBox__value">
 
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item pmx-selector__item--selected">
-                      <div class="pmx-selector__block ">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">18/04/18</div>
+                    <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector__item pmx-selector__item--selected">
+                        <div class="pmx-selector__block ">
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">18/04/18</div>
+                        </div>
                       </div>
                     </div>
-                  </div>
 
+                  </div>
                 </div>
               </li>
               <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -193,16 +201,18 @@
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner ">
+              <div class="itemBox__value">
 
-              {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-              <div class="pmx-selector">
-                <div class="pmx-selector__item pmx-selector__item--selected">
-                  <div class="pmx-selector__block ">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">today</div>
+                {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
+                <div class="pmx-selector">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">today</div>
+                    </div>
                   </div>
                 </div>
-              </div>
 
+              </div>
             </div>
           </li>
           <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -232,16 +242,18 @@
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner ">
+              <div class="itemBox__value">
 
-              {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-              <div class="pmx-selector  JS_toggle--calendar">
-                <div class="pmx-selector__item pmx-selector__item--selected">
-                  <div class="pmx-selector__block ">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">18/04/18</div>
+                {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
+                <div class="pmx-selector  JS_toggle--calendar">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">18/04/18</div>
+                    </div>
                   </div>
                 </div>
-              </div>
 
+              </div>
             </div>
           </li>
           <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -272,16 +284,18 @@
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
+              <div class="itemBox__value">
 
-              {% include blocks/popup/include-exclude-selector.html selected="include"%}
-              <div class="pmx-selector">
-                <div class="pmx-selector__item pmx-selector__item--selected">
-                  <div class="pmx-selector__block ">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">19/03/18-20/03/18</div>
+                {% include blocks/popup/include-exclude-selector.html selected="include"%}
+                <div class="pmx-selector">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">19/03/18-20/03/18</div>
+                    </div>
                   </div>
                 </div>
-              </div>
 
+              </div>
             </div>
           </li>
           <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -310,17 +324,19 @@
       <div class="itemBox JS_itemBox--children itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
-            <div class="itemBox__cellInner ">
+            <div class="itemBox__cellInner">
+              <div class="itemBox__value">
 
-              {% include blocks/popup/include-exclude-selector.html selected="include"%}
-              <div class="pmx-selector">
-                <div class="pmx-selector__item pmx-selector__item--selected">
-                  <div class="pmx-selector__block ">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
+                {% include blocks/popup/include-exclude-selector.html selected="include"%}
+                <div class="pmx-selector">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
+                    <div class="pmx-selector__block ">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
+                    </div>
                   </div>
                 </div>
-              </div>
 
+              </div>
             </div>
           </li>
           <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
