--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -54,16 +54,18 @@
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
+              <div class="itemBox__value">
 
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Design</div>
+                <div class="pmx-selector pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Design</div>
+                    </div>
                   </div>
                 </div>
-              </div>
 
+              </div>
             </div>
           </li>
           <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
@@ -80,16 +82,18 @@
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
+              <div class="itemBox__value">
 
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Marketing</div>
+                <div class="pmx-selector pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Marketing</div>
+                    </div>
                   </div>
                 </div>
-              </div>
 
+              </div>
             </div>
           </li>
           <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
@@ -129,16 +133,18 @@
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
               <li class="itemBox__cell ">
                 <div class="itemBox__cellInner">
+                  <div class="itemBox__value">
 
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Front-end</div>
+                    <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector__item">
+                        <div class="pmx-selector__block">
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Front-end</div>
+                        </div>
                       </div>
                     </div>
-                  </div>
 
+                  </div>
                 </div>
               </li>
               <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
@@ -156,16 +162,18 @@
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
               <li class="itemBox__cell">
                 <div class="itemBox__cellInner">
+                  <div class="itemBox__value">
 
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Back-end</div>
+                    <div class="pmx-selector pmx-selector--readonly">
+                      <div class="pmx-selector__item">
+                        <div class="pmx-selector__block">
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Back-end</div>
+                        </div>
                       </div>
                     </div>
-                  </div>
 
+                  </div>
                 </div>
               </li>
               <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
@@ -203,17 +211,19 @@
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell ">
           <div class="itemBox__cellInner">
+            <div class="itemBox__value">
 
-            {% include blocks/popup/include-exclude-selector.html selected="include"%}
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Design</div>
+              {% include blocks/popup/include-exclude-selector.html selected="include"%}
+              <div class="pmx-selector pmx-selector--readonly">
+                <div class="pmx-selector__item">
+                  <div class="pmx-selector__block">
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Design</div>
+                  </div>
                 </div>
               </div>
-            </div>
 
+            </div>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
@@ -226,17 +236,19 @@
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell ">
           <div class="itemBox__cellInner">
+            <div class="itemBox__value">
 
-            {% include blocks/popup/include-exclude-selector.html selected="include"%}
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Marketing</div>
+              {% include blocks/popup/include-exclude-selector.html selected="include"%}
+              <div class="pmx-selector pmx-selector--readonly">
+                <div class="pmx-selector__item">
+                  <div class="pmx-selector__block">
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Marketing</div>
+                  </div>
                 </div>
               </div>
-            </div>
 
+            </div>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
@@ -249,17 +261,19 @@
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell ">
           <div class="itemBox__cellInner">
+            <div class="itemBox__value">
 
-            {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Front-end</div>
+              {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
+              <div class="pmx-selector pmx-selector--readonly">
+                <div class="pmx-selector__item">
+                  <div class="pmx-selector__block">
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Front-end</div>
+                  </div>
                 </div>
               </div>
-            </div>
 
+            </div>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
@@ -272,17 +286,19 @@
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell ">
           <div class="itemBox__cellInner">
+            <div class="itemBox__value">
 
-            {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022">ग़</div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Back-end</div>
+              {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
+              <div class="pmx-selector pmx-selector--readonly">
+                <div class="pmx-selector__item">
+                  <div class="pmx-selector__block">
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022">ग़</div>
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Back-end</div>
+                  </div>
                 </div>
               </div>
-            </div>
 
+            </div>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
