--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -21,17 +21,19 @@
     <ul class="itemBox__row itemBox__row--item">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
+          <div class="itemBox__value">
 
-          <div class="pmx-selector pmx-selector--readonly">
-            <div class="pmx-selector__item">
-              <div class="pmx-selector__block">
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
-                <span class="pmx-selector__blockSeperator"></span>
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
+            <div class="pmx-selector pmx-selector--readonly">
+              <div class="pmx-selector__item">
+                <div class="pmx-selector__block">
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
+                  <span class="pmx-selector__blockSeperator"></span>
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
+                </div>
               </div>
             </div>
-          </div>
 
+          </div>
         </div>
       </li>
     </ul>
@@ -39,17 +41,19 @@
     <ul class="itemBox__row itemBox__row--item">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
+          <div class="itemBox__value">
 
-          <div class="pmx-selector pmx-selector--readonly">
-            <div class="pmx-selector__item">
-              <div class="pmx-selector__block">
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
-                <span class="pmx-selector__blockSeperator"></span>
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Enhance logon formula for listly</span>
+            <div class="pmx-selector pmx-selector--readonly">
+              <div class="pmx-selector__item">
+                <div class="pmx-selector__block">
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
+                  <span class="pmx-selector__blockSeperator"></span>
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Enhance logon formula for listly</span>
+                </div>
               </div>
             </div>
-          </div>
 
+          </div>
         </div>
       </li>
     </ul>
@@ -57,17 +61,19 @@
     <ul class="itemBox__row itemBox__row--item">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
+          <div class="itemBox__value">
 
-          <div class="pmx-selector pmx-selector--readonly">
-            <div class="pmx-selector__item">
-              <div class="pmx-selector__block">
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
-                <span class="pmx-selector__blockSeperator"></span>
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
+            <div class="pmx-selector pmx-selector--readonly">
+              <div class="pmx-selector__item">
+                <div class="pmx-selector__block">
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
+                  <span class="pmx-selector__blockSeperator"></span>
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
+                </div>
               </div>
             </div>
-          </div>
 
+          </div>
         </div>
       </li>
     </ul>
@@ -75,17 +81,19 @@
     <ul class="itemBox__row itemBox__row--item">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
+          <div class="itemBox__value">
 
-          <div class="pmx-selector pmx-selector--readonly">
-            <div class="pmx-selector__item">
-              <div class="pmx-selector__block">
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
-                <span class="pmx-selector__blockSeperator"></span>
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Critical</span>
+            <div class="pmx-selector pmx-selector--readonly">
+              <div class="pmx-selector__item">
+                <div class="pmx-selector__block">
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
+                  <span class="pmx-selector__blockSeperator"></span>
+                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Critical</span>
+                </div>
               </div>
             </div>
-          </div>
 
+          </div>
         </div>
       </li>
     </ul>
