--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -16,7 +16,9 @@
     {% for item in site.data.breadcrumb-popup.items %}
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell itemBox__cell--permalink">
-          <div class="itemBox__cellInner JS_text">{{item}}</div>
+          <div class="itemBox__cellInner JS_text">
+            <div class="itemBox__value">{{item}}</div>
+          </div>
         </li>
       </ul>
     {% endfor %}
