fix fixed header

--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -1,5 +1,5 @@
 <div class="item item--bug">
-  <div class="sticky-headerrrrr">
+  <div class="sticky-header">
     {% include blocks/item-header.html %}
   </div>
 </div>
