fix shadow for tabs

--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -168,7 +168,7 @@
 
         .tabs-nav__slideShadow {
           left: 0;
-          background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, #2c5386 100%);
+          background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, #FFF 100%);
         }
 
         .tabs-nav__slideArrow {
@@ -185,7 +185,7 @@
 
         .tabs-nav__slideShadow {
           right: 0;
-          background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #2c5386 100%);
+          background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #FFF 100%);
         }
 
         .tabs-nav__slideArrow {
