--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -42,9 +42,9 @@
 @import "components/breadcrumbs.css";
 @import "components/tabs.css";
 @import "components/itemBox.css";
-@import "components/pmx-selector.css";
-@import "components/pmx-link.css";
-@import "components/pmx-note.css";
+@import "components/selector.css";
+@import "components/link.css";
+@import "components/note.css";
 @import "components/multiSelector.css";
 
 // temporary, because of js
