--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -1,14 +1,14 @@
 ---
 ---
 
-.pmx-field {
+.field {
   position: relative;
   padding: 10px;
   border: 1px solid transparent;
   transition: all .3s ease-in-out;
 
   &--empty {
-    .pmx-field__label {
+    .field__label {
       top: 25px;
       font-size: 18px;
       font-style: italic;
@@ -18,7 +18,7 @@
   }
 
   &--error {
-    .pmx-field {
+    .field {
       &__label {
         color: red;
       }
@@ -30,7 +30,7 @@
     border-radius: 3px;
     box-shadow: 0 0 200px rgba(0,0,0,.1);
 
-    .pmx-field__label {
+    .field__label {
       top: 0;
       font-size: 12px;
       font-style: normal;
@@ -81,7 +81,19 @@
       }
     }
 
-    .pmx-selector {
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   bottom: 2px;
+    //   right: 0;
+    //   width: 30px;
+    //   height: 38px;
+    //   background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 60%, rgba(255, 255, 255, 1) 100%);
+    //   pointer-events: none;
+    //   z-index: 1;
+    // }
+
+    .selector {
       margin: 5px 1px;
     }
 
@@ -106,7 +118,7 @@
   }
 }
 
-.pmx-selector {
+.selector {
   position: relative;
   display: inline-block;
   vertical-align: middle;
@@ -121,7 +133,7 @@
     background-color: #D7D7D7;
     border: 2px solid #D7D7D7;
 
-    .pmx-selector__item {
+    .selector__item {
       &Seperator {
         background-color: transparent;
       }
@@ -132,19 +144,19 @@
     background-color: #D7D7D7;
     border: 2px solid #D7D7D7;
 
-    .pmx-selector__itemSeperator {
+    .selector__itemSeperator {
       border-radius: 15px;
     }
 
-    .pmx-selector__item,
-    .pmx-selector__item:hover {
+    .selector__item,
+    .selector__item:hover {
       cursor: text;
       filter: saturate(1) opacity(1);
     }
   }
 
   &--multiselect {
-    .pmx-selector__item {
+    .selector__item {
       overflow: visible;
       border-radius: 3px;
 
@@ -190,7 +202,7 @@
     }
 
     &:first-child {
-      .pmx-selector__block  {
+      .selector__block  {
         border-top-left-radius: 15px;
         border-bottom-left-radius: 15px;
 
@@ -204,7 +216,7 @@
     }
 
     &:last-child {
-      .pmx-selector__block  {
+      .selector__block  {
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
 
