includes/javascript: removed name pmx-

--- a/_includes/javascript/colorToggle.html
+++ b/_includes/javascript/colorToggle.html
@@ -1,7 +1,7 @@
-<div class="pmx-selector">
-  <div class="pmx-selector__item pmx-selector__item--selected">
-    <div class="pmx-selector__block">
-      <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{include.color}};" data-color="{{include.color}}">ग़</div>
+<div class="selector">
+  <div class="selector__item selector__item--selected">
+    <div class="selector__block">
+      <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{include.color}};" data-color="{{include.color}}">ग़</div>
     </div>
   </div>
 </div>
