--- a/_includes/javascript/newSelectedItem--unit.html
+++ b/_includes/javascript/newSelectedItem--unit.html
@@ -1,11 +1,11 @@
 <div class="itemBox__cellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
 
   ${colorToggleHTML}
-  <div class="pmx-selector pmx-selector--readonly">
-    <div class="pmx-selector__item">
-      <div class="pmx-selector__block">
+  <div class="selector selector--readonly">
+    <div class="selector__item">
+      <div class="selector__block">
         ${colorPrefixHTML}
-        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">${textOfActionItem}</div>
+        <div class="selector__blockPart selector__blockPart--field JS_text">${textOfActionItem}</div>
       </div>
     </div>
   </div>
