--- a/_includes/javascript/and-or-selector.html
+++ b/_includes/javascript/and-or-selector.html
@@ -1,13 +1,13 @@
-  <div class="pmx-selector pmx-selector--expanded JS_selector">
-    <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
-      <div class="pmx-selector__block">
-        <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</div>
+  <div class="selector selector--expanded JS_selector">
+    <div class="selector__item JS_selectorItem selector__item--selected">
+      <div class="selector__block">
+        <div class="selector__blockPart selector__blockPart--label">Or</div>
       </div>
     </div>
-    <div class="pmx-selector__itemSeperator"></div>
-    <div class="pmx-selector__item JS_selectorItem">
-      <div class="pmx-selector__block">
-        <div class="pmx-selector__blockPart pmx-selector__blockPart--label">And</div>
+    <div class="selector__itemSeperator"></div>
+    <div class="selector__item JS_selectorItem">
+      <div class="selector__block">
+        <div class="selector__blockPart selector__blockPart--label">And</div>
       </div>
     </div>
   </div>
