--- a/sass/components/pmx-selector.scss
+++ b/sass/components/pmx-selector.scss
@@ -47,19 +47,15 @@
   &__label {
     position: relative;
     top: 0;
-
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-
-    font-family: 'tenforce', sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #808080;
-
     transition: all .15s ease-in-out;
   }
 
@@ -84,18 +80,6 @@
         pointer-events: none;
       }
     }
-
-    // &::after {
-    //   content: '';
-    //   position: absolute;
-    //   bottom: 2px;
-    //   right: 0;
-    //   width: 30px;
-    //   height: 38px;
-    //   background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 60%, rgba(255, 255, 255, 1) 100%);
-    //   pointer-events: none;
-    //   z-index: 1;
-    // }
 
     .pmx-selector {
       margin: 5px 1px;
@@ -195,10 +179,14 @@
       filter: saturate(0.7) opacity(0.7);
     }
 
-    &--selected,
-    &--selected:hover {
+    &--selected {
       box-shadow: 0 2px 8px -2px rgba(0,0,0,0.7);
       filter: saturate(1) opacity(1);
+
+      &:hover {
+        box-shadow: 0 2px 8px -2px rgba(0,0,0,0.55);
+        filter: saturate(.85) opacity(.85);
+      }
     }
 
     &:first-child {
@@ -279,18 +267,13 @@
       vertical-align: top;
       height: 26px;
       line-height: 26px;
-
       max-width: 300px;
       padding: 0 10px;
-
       border-radius: 3px;
       background-color: #FFF;
-
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-
-      font-family: 'tenforce', sans-serif;
       font-size: 16px;
       font-weight: normal;
       letter-spacing: normal;
